{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 402,
  "lineage": "a0f9d1b7-8f8d-cd2b-5298-5160bf3cf717",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d2df59605aa7e49",
            "association_id": "eipassoc-020792cb04e2e376e",
            "domain": "vpc",
            "id": "eipalloc-00d2df59605aa7e49",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02623bfb1bae6dadb",
            "private_dns": "ip-10-0-0-192.ap-south-1.compute.internal",
            "private_ip": "10.0.0.192",
            "public_dns": "ec2-35-154-238-208.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.238.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "razorops-ngw-ip"
            },
            "tags_all": {
              "Name": "razorops-ngw-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:internet-gateway/igw-095fbfaaa6069723d",
            "id": "igw-095fbfaaa6069723d",
            "owner_id": "146744783769",
            "tags": {
              "Name": "razorops-igw"
            },
            "tags_all": {
              "Name": "razorops-igw"
            },
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d2df59605aa7e49",
            "connectivity_type": "public",
            "id": "nat-00b11c5a6a967f6cb",
            "network_interface_id": "eni-02623bfb1bae6dadb",
            "private_ip": "10.0.0.192",
            "public_ip": "35.154.238.208",
            "subnet_id": "subnet-0c05710d9f0618d83",
            "tags": {
              "Name": "razorops-ngw"
            },
            "tags_all": {
              "Name": "razorops-ngw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017a94d0306020a461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00b11c5a6a967f6cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017a94d0306020a46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:route-table/rtb-013c11fd0eae4cb52",
            "id": "rtb-013c11fd0eae4cb52",
            "owner_id": "146744783769",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095fbfaaa6069723d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "razorops-Default-rt"
            },
            "tags_all": {
              "Name": "razorops-Default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc98561cf0b0440",
            "route_table_id": "rtb-013c11fd0eae4cb52",
            "subnet_id": "subnet-0c05710d9f0618d83"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a9afddcd75194e",
            "route_table_id": "rtb-013c11fd0eae4cb52",
            "subnet_id": "subnet-011e5eee0d83013ae"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:security-group/sg-0544224dbca96387f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0544224dbca96387f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "razorops-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "146744783769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "razorops-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "razorops-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:security-group/sg-07eee30c63b464ebb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07eee30c63b464ebb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "razorops-Worker-sg",
            "name_prefix": "",
            "owner_id": "146744783769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "razorops-Worker-sg"
            },
            "tags_all": {
              "Name": "razorops-Worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:security-group/sg-040c1c08ff6288799",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster API Server to communicate with the worker nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8bd1c5a95b84b37"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-040c1c08ff6288799",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8bd1c5a95b84b37"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "razorops-cluster-sg",
            "name_prefix": "",
            "owner_id": "146744783769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "razorops-cluster-sg"
            },
            "tags_all": {
              "Name": "razorops-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:security-group/sg-0c8bd1c5a95b84b37",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8bd1c5a95b84b37",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040c1c08ff6288799"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "razorops-node-sg",
            "name_prefix": "",
            "owner_id": "146744783769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "razorops-node-sg",
              "kubernetes.io/cluster/razorops-cluster": "owned"
            },
            "tags_all": {
              "Name": "razorops-node-sg",
              "kubernetes.io/cluster/razorops-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:security-group/sg-093bb5230c79372ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093bb5230c79372ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "razorops-Public-sg",
            "name_prefix": "",
            "owner_id": "146744783769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "razorops-Public-sg"
            },
            "tags_all": {
              "Name": "razorops-Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2801247654",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040c1c08ff6288799",
            "security_group_rule_id": "sgr-03f43012db8ac53a7",
            "self": false,
            "source_security_group_id": "sg-0c8bd1c5a95b84b37",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-2307937163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040c1c08ff6288799",
            "security_group_rule_id": "sgr-002c6bfbe1310a945",
            "self": false,
            "source_security_group_id": "sg-0c8bd1c5a95b84b37",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2931739722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0544224dbca96387f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2626019314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0544224dbca96387f",
            "security_group_rule_id": "sgr-022c668dc064f4e4e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2393503190",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07eee30c63b464ebb",
            "security_group_rule_id": "sgr-06b3b37a31b6473db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-4035234416",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07eee30c63b464ebb",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-808025322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8bd1c5a95b84b37",
            "security_group_rule_id": "sgr-04cde704ca3cc9547",
            "self": false,
            "source_security_group_id": "sg-040c1c08ff6288799",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2255648461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07eee30c63b464ebb",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-20194589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c8bd1c5a95b84b37",
            "security_group_rule_id": "sgr-01e3fae7e1d72f953",
            "self": false,
            "source_security_group_id": "sg-0c8bd1c5a95b84b37",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1519206128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-093bb5230c79372ec",
            "security_group_rule_id": "sgr-0fae16258dfc07d2b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1376010923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-093bb5230c79372ec",
            "security_group_rule_id": "sgr-076137d7cfddaa739",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-746151442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-093bb5230c79372ec",
            "security_group_rule_id": "sgr-0dfdeb934dbe1ef4e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:subnet/subnet-0b8478ea15dfbf443",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8478ea15dfbf443",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146744783769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "razorops-private-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "razorops-private-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:subnet/subnet-07ae48bfdbb452a68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ae48bfdbb452a68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146744783769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "razorops-private-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "razorops-private-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:subnet/subnet-0c05710d9f0618d83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c05710d9f0618d83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146744783769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "razorops-public-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "razorops-public-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:subnet/subnet-011e5eee0d83013ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011e5eee0d83013ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146744783769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "razorops-public-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "razorops-public-sg",
              "kubernetes.io/cluster/razorops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a410bf07ac8a2e71"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:146744783769:vpc/vpc-0a410bf07ac8a2e71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae6cce651d26d5d1",
            "default_route_table_id": "rtb-017a94d0306020a46",
            "default_security_group_id": "sg-04cd053f5f2070fe0",
            "dhcp_options_id": "dopt-0fea0c03d52e32371",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a410bf07ac8a2e71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017a94d0306020a46",
            "owner_id": "146744783769",
            "tags": {
              "Name": "razorops-vpc",
              "kubernetes.io/cluster/razorops-cluster": "shared"
            },
            "tags_all": {
              "Name": "razorops-vpc",
              "kubernetes.io/cluster/razorops-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}